# DevilutionM

./: CMakeLists.txt  README.md  defs.h  enums.h  get_dependencies.sh  structs.h  types.h
DiabloUI/: diabloui.h
Source/: appfat.h  automap.cpp  capture.cpp  codec.cpp  control.cpp  cursor.cpp  dead.cpp  debug.cpp  diablo.cpp  diablo.h  doom.cpp  drlg_l1.cpp  drlg_l2.cpp  drlg_l3.cpp  drlg_l4.cpp  dthread.cpp  dx.cpp  dx.h  effects.cpp  encrypt.cpp  engine.cpp  engine.h  error.cpp  fault.cpp  fault.h  gamemenu.cpp  gendung.cpp  gmenu.cpp  gmenu.h  help.cpp  init.cpp  init.h  interfac.cpp  inv.cpp  itemdat.cpp  items.cpp  lighting.cpp  list.h  loadsave.cpp  logging.cpp  (+46 more)
Stub/: appfat.cpp  asserts.h  capture.cpp  diablo.cpp  diabloui.cpp  dthread.cpp  dx.cpp  dx_stub.h  effects.cpp  fault.cpp  gamemenu.cpp  init.cpp  main.cpp  main_test.cpp  miniwin.cpp  miniwin.h  miniwin_ddraw.h  miniwin_dsound.h  miniwin_io.cpp  miniwin_msg_sdl.cpp  miniwin_rand.cpp  miniwin_sdl.cpp  miniwin_sdl.h  movie.cpp  nthread.cpp  restrict.cpp  sanitize.cpp  sdlrender.cpp  sound.cpp  storm.cpp  storm_net.cpp  stubs.h  test_utils.h  validate.cpp  wave.cpp  wave.h
android/app/: .build.gradle.swp  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/pvallet/com/github/hello_sdl2/: HelloSDL2Activity.java
android/app/src/main/res/values/: strings.xml
